ingress.deployment.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day 13 Ingress 
# Url: https://ithelp.ithome.com.tw/articles/10193528
# Licence: MIT
#####################################

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: red-nginx
spec:
    replicas: 4
    template:
      metadata:
        labels: 
          app: red-nginx
      spec:
        containers:
        - name: nginx
          image: jlptf/red
          ports:
          - containerPort: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: green-nginx
spec:
    replicas: 2
    template:
      metadata:
        labels: 
          app: green-nginx
      spec:
        containers:
        - name: nginx
          image: jlptf/green
          ports:
          - containerPort: 80
