ingress.service.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day 13 Ingress 
# Url: https://ithelp.ithome.com.tw/articles/10193528
# Licence: MIT
#####################################

apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: NodePort
  selector:
    app: green-nginx
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: red-service
spec:
  type: NodePort
  selector:
    app: red-nginx
  ports:
    - protocol: TCP
      port: 80
